--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -167,6 +167,7 @@ hi:
     badges title: "Badges"
     currently selected: "वर्तमान में चयनित:"
     read reference: "%{reference} पढ़िए"
+    read chapter: "Read full chapter"
     compare all versions: "सभी संस्करण की तुलना करें"
     link will be added: "जोड़ा जायेगा"
     my picture: "मेरी तस्वीर अपडेट कीजिए"
@@ -223,6 +224,7 @@ hi:
     note: "नई टिपण्णी"
     selected: "चुना हुआ"
     chapter: "अध्याय"
+    home: "Home"
     bible: "बाइबिल"
     notes title: "टिप्पणियाँ"
     friends: "मित्र"
@@ -1076,6 +1078,19 @@ hi:
         loading: "और अधिक संस्करण लोड किया जा रहा हैं......"
         load error: "कृपया क्षमा कीजिये और अधिक संस्करण लोड करने में कठिनाई हैं।इस मेनू को निरस्त कर दोबारा कोशिश करे।"
     campaigns: 
+        christmas: 
+            tracker title: "Christmas Story Tracker"
+            twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
+            verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
+            read more: "Read the amazing story of Christmas"
+            read about: "Reading about the birth of Jesus"
+            totals since: "YouVersion totals since December 1, 2014:"
+            total installs: "Total installs on smartphones and tablets"
+            download: "Download the free Bible App"
+            versions: "Over %{version_count} versions in %{language_count} languages"
+            tagline: "the Bible that goes with you anywhere"
+            chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion: बाइबिल app"
             tagline: "<em>100 मिलियन </em> से शुभारंभ"
