--- a/config/locales/km.yml
+++ b/config/locales/km.yml
@@ -167,6 +167,7 @@ km:
     badges title: "ផ្លាក​សញ្ញា"
     currently selected: "បាន​ជ្រើស​រើស​ថ្មីៗ"
     read reference: "អាន %{reference}"
+    read chapter: "អានជំពូក​ទាំង​មូល"
     compare all versions: "ប្រៀប​ធៀប​គ្រប់​ជំនាន់"
     link will be added: "នឹង​ត្រូវ​បន្ថែម​ចូល"
     my picture: "អាប់ឌែត​រូប​ភាព​ខ្ញុំ"
@@ -196,7 +197,7 @@ km:
     reader: "កម្ម​វិធី​អាន"
     lifechurch short url: "LifeChurch.tv"
     about: "អំពីរ"
-    versions link: "Versions"
+    versions link: "ជំនាន់"
     jobs: "ការងារ"
     privacy policy: "ច្បាប់​ជាឯកជន"
     terms: "លក្ខខណ្ឌ័"
@@ -223,6 +224,7 @@ km:
     note: "កំណត់​ត្រាថ្មី"
     selected: "បានជ្រើសរើស"
     chapter: "ជំពូក"
+    home: "ទំព័រ​ដើម"
     bible: "ព្រះគម្ពីរ"
     notes title: "កំណត់​ត្រា"
     friends: "មិត្ត​ភ័ក្ត្រ"
@@ -718,12 +720,12 @@ km:
             readings 5 or more: "ការ​អាន"
         stats: 
             friends reading: 
-                other: "%{count} friends subscribed to this plan"
+                other: "មាន​មិត្ត​ភ័ក្ត្រ​របស់​លោក​អ្នក​ចំនួន %{count} នាក់បាន​ចុះ​ឈ្មោះ​ក្នុង​គំរោង​នេះ"
             friends completed: 
-                other: "%{count} friends have completed this plan"
-            total completions: "Over %{count} completions"
-            view all: "View All"
-            close: "Close"
+                other: "មាន​មិត្ត​ភ័ក្ត្រ​របស់​លោក​អ្នក​ចំនួន %{count} នាក់បាន​​បញ្ចប់​​គំរោង​នេះ"
+            total completions: "មានគំរោង​ចំនួន​​ជាង %{count} ត្រូវ​​បានបញ្ចប់​"
+            view all: "បង្ហាញ​ទាំង​អស់"
+            close: "បិទ"
         settings: "ការ​កំណត់"
         privacy: 
             visible to friends?: "តើ​លោក​អ្នក​ចង់​អោយ​មិត្ត​ភ័ក្រ្ត​របស់​លោក​អ្នក​ឃើញ​គំរោង​ផែន​ការ​សកម្ម​ភាព​របស់​លោក​អ្នក​ដែរ​ឬទេ?"
@@ -1074,6 +1076,19 @@ km:
         loading: "ទាញ​យក​ជំនាន់​ច្រើន​ទៀត"
         load error: "សូម​ទោស មាន​បញ្ហា​ទាញ​យក​ជំនាន់​ច្រើន​ទៀត។ បិទ មីនុយ​នេះ​ហើយ​បើក​សារ​ជា​ថ្មី​ម្ដង​ទៀត។"
     campaigns: 
+        christmas: 
+            tracker title: "តាម​ដាន​រឿង​គ្រិស្ត​ស្មាស់"
+            twitter text: "មើល​ពី ពិភព​លោក​អាន​ពីកំណើត​ព្រះយេស៊ូ ចែក​រំលែក​រឿង​គ្រិស្ត​ស្មាស់@YouVersion​https://www.bible.com/christmas"
+            facebook text: "ចែក​រំលែក​រឿង​គ្រិស្ត​ស្មាស់​ដូច​ជាមនុស្ស​នៅ​ជុំ​វិញពិភព​លោក​កំពុង​អាន​អំពី​រឿង​កំណើត​ព្រះយេស៊ូ  នៅ​ក្នុង​ក្រុម​ជំនុំ ឬ​នៅ​ផ្ទះ ជិត​មនុស្ស​ដែល​យើង​ស្រឡាញ់ ឬ​ក្នុង​កំឡុង​ពេល​ស្ងៀម​ស្ងាត់​តែ​ម្នាក់​ឯង យើង​កំពុត​តែ​ឆ្លុះ​បញ្ចាំង​​​ពី​ក្ដី​ស្រឡាញ់​ដ៏អស្ចារ្យ​របស់​ព្រះ​ចំពោះ​យើង។"
+            verse: "<sup> ទេវតា​ពោល​ទៅ​គេ​ថា៖ «កុំ​ខ្លាច​អ្វី​ឡើយ </sup>ខ្ញុំ​នាំ​ដំណឹងល្អ​មួយ​មក​ប្រាប់​អ្នក​រាល់​គ្នា។ ដំណឹង​នេះ​នឹង​ធ្វើ​អោយ​ប្រជារាស្ត្រ​ទាំង​មូល មាន​អំណរ​ដ៏​លើសលប់។ <sup>យប់​នេះ នៅ​ក្នុង​ភូមិ​កំណើត​របស់​ព្រះបាទ​ដាវីឌ ព្រះសង្គ្រោះ​របស់​អ្នក​រាល់​គ្នា​ប្រសូត​ហើយ គឺ​ព្រះគ្រិស្ដ​ជា​អម្ចាស់។ </sup>"
+            read more: "អាន​ពី​រឿងគ្រិស្ត​ស្មាស់​​ដ៏​អស្ចារ្យ"
+            read about: "អាន​អំពី​កំណើត​ព្រះ​យេស៊ូ​គ្រិស្ត"
+            totals since: "ចំនួន​សរុប​ YouVersion តាំង​ពី​ ខែធ្នូ 1, 2014:"
+            total installs: "ចំនួន​សរុប​ដែល​បាន​តម្លើង​លើ​ទូរស័ព្ទ​ឆ្លាត​វៃ និង តាប្លែត"
+            download: "ដោន​ឡូដ​យក​កម្មវិី ព្រះ​គម្ពីរ​ដោយ​ឥត​គិត​ថ្លៃ"
+            versions: "លើស​ពី %{version_count} ជំនាក់​ក្នុង​ %{language_count} ភាសា"
+            tagline: "ជា​ព្រះ​គម្ពីរ​ដែល​ទៅ​ជាមួយ​អ្នក​គ្រប់​ទី​កន្លែង"
+            chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion: កម្មវិធីព្រះគម្ពីរ"
             tagline: "វាចាប់ផ្ដើមជាមួយ​ <em>១០០ លាន</em>"
