--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -167,6 +167,7 @@ ko:
     badges title: "배지"
     currently selected: "선택된 구절:"
     read reference: "%{reference} 읽기"
+    read chapter: "성경본문 보기"
     compare all versions: "모든 번역본 비교"
     link will be added: "추가 예정"
     my picture: "내 사진 바꾸기"
@@ -223,6 +224,7 @@ ko:
     note: "새 노트"
     selected: "선택"
     chapter: "장"
+    home: "Home"
     bible: "성경"
     notes title: "노트"
     friends: "내 친구"
@@ -1074,6 +1076,19 @@ ko:
         loading: "번역본 추가 로딩중 ..."
         load error: "번역본을 추가로 로딩하는 중 오류가 발생했습니다.  메뉴를 닫으신 후에 다시 시도를 해주세요."
     campaigns: 
+        christmas: 
+            tracker title: "Christmas Story Tracker"
+            twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
+            verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
+            read more: "Read the amazing story of Christmas"
+            read about: "Reading about the birth of Jesus"
+            totals since: "YouVersion totals since December 1, 2014:"
+            total installs: "Total installs on smartphones and tablets"
+            download: "Download the free Bible App"
+            versions: "Over %{version_count} versions in %{language_count} languages"
+            tagline: "the Bible that goes with you anywhere"
+            chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion: 성경 앱"
             tagline: "<em>1억건 다운로드</em> 이제 시작입니다."
