--- a/config/locales/pt-PT.yml
+++ b/config/locales/pt-PT.yml
@@ -167,6 +167,7 @@ pt-PT:
     badges title: "Medalhas"
     currently selected: "Atualmente Selecionado:"
     read reference: "Leia %{reference}"
+    read chapter: "Read full chapter"
     compare all versions: "Comparar Todas as Versões"
     link will be added: "Será Adicionado"
     my picture: "Atualizar a Minha Imagem"
@@ -223,6 +224,7 @@ pt-PT:
     note: "Nova Nota"
     selected: "Selecionado"
     chapter: "Capítulo"
+    home: "Home"
     bible: "Bíblia"
     notes title: "Notas"
     friends: "Amigos"
@@ -1076,6 +1078,19 @@ pt-PT:
         loading: "Descarregando mais versões ..."
         load error: "Desculpe, houve um problema ao descarregar mais versões. Feche este menu e tente novamente."
     campaigns: 
+        christmas: 
+            tracker title: "Christmas Story Tracker"
+            twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
+            verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
+            read more: "Read the amazing story of Christmas"
+            read about: "Reading about the birth of Jesus"
+            totals since: "YouVersion totals since December 1, 2014:"
+            total installs: "Total installs on smartphones and tablets"
+            download: "Download the free Bible App"
+            versions: "Over %{version_count} versions in %{language_count} languages"
+            tagline: "the Bible that goes with you anywhere"
+            chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion: A app da Bíblia"
             tagline: "Tem início nos <em>100 milhões</em>"
