--- a/config/locales/sq.yml
+++ b/config/locales/sq.yml
@@ -167,6 +167,7 @@ sq:
     badges title: "Emblema"
     currently selected: "Aktualisht i përzgjedhur:"
     read reference: "Lexo %{reference}"
+    read chapter: "Lexo të gjithë kapitullin"
     compare all versions: "Krahaso të gjitha versionet"
     link will be added: "do të shtohet"
     my picture: "Përditëso foton time"
@@ -223,6 +224,7 @@ sq:
     note: "Shënim i ri"
     selected: "I përzgjedhur"
     chapter: "Kapitulli"
+    home: "Kreu"
     bible: "Bibla"
     notes title: "Shënimet"
     friends: "Miqtë"
@@ -1076,6 +1078,19 @@ sq:
         loading: "Duke vendosur më shumë versione..."
         load error: "Na falni, pati një problem me vendosjen e më shumë versioneve. Mbylle këtë menu dhe rihape për të provuar sërish."
     campaigns: 
+        christmas: 
+            tracker title: "Gjurmuesi i Historisë së Krishtlindjes"
+            twitter text: "Shikoni botën të lexojë për lindjen e Jezusit. Ndani gjurmuesin e Historisë së Krishtlindjes @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Ndani gjurmuesin e Historisë së Krishtlindjes ndërsa njerëzit anembanë botës lexojnë për lindjen e Jezusit.  Në Kishë ose në shtëpi, pranë familjes apo vetëm, do të reflektojmë mrekullinë e dashurisë së Perëndisë për ne."
+            verse: "<sup>10 Por Por engjëlli u tha atyre:<br>“Mos druani,</sup>sepse unë po ju lajmëroj një gëzim të madh për të gjithë popullin; <sup>11 sepse sot në qytetin e Davidit lindi për ju një Shpëtimtar, që është Krishti, Zoti.”</sup>"
+            read more: "Lexo historinë e mahnitshme të Krishtlindjes"
+            read about: "Lexojmë mbi lindjen e Jezusit"
+            totals since: "Totali i YouVersion që nga 1 Dhjetori 2014:"
+            total installs: "Totali i instalimeve në smartfone dhe tableta"
+            download: "Shkarko falas Aplikacionin e Biblës"
+            versions: "Mbi %{version_count}versione në %{language_count}gjuhë"
+            tagline: "Bibla që vjen kudo me ty"
+            chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion: Programi i Biblës"
             tagline: "Fillon me <em>100 milionë</em>"
