--- a/config/locales/th.yml
+++ b/config/locales/th.yml
@@ -167,6 +167,7 @@ th:
     badges title: "เข็มกลัด"
     currently selected: "ที่ได้เลือกล่าสุด:"
     read reference: "อ่าน %{reference}"
+    read chapter: "อ่านในบทเต็ม"
     compare all versions: "เปรียบเทียบพระคัมภีร์ทั้งหมด"
     link will be added: "จะได้รับการเพิ่ม"
     my picture: "อัพเดทรูปภาพของฉัน"
@@ -223,6 +224,7 @@ th:
     note: "โน้ตใหม่"
     selected: "เลือก"
     chapter: "บทที่"
+    home: "หน้าหลัก"
     bible: "พระคัมภีร์"
     notes title: "โน้ต"
     friends: "เพื่อนๆ"
@@ -1074,6 +1076,19 @@ th:
         loading: "กำลังโหลดฉบับอื่นๆ ..."
         load error: "ขออภัย มีปัญหาในการโหลดพระคัมภีร์ฉบับอื่น โปรดปิดเมนูนี้และเปิดใหม่เพื่อทดลองใหม่"
     campaigns: 
+        christmas: 
+            tracker title: "วันคริสต์มาส"
+            twitter text: "มาดูกันว่าทั่วโลกได้อ่านเรื่องราวกับการกำเนิดของพระเยซู แบ่งปันเรื่องราววันคริสต์มาส @YouVersion: https://www.bible.com/christmas"
+            facebook text: "แบ่งปันเรื่องราววันคริสต์มาสเหมือนอย่างผู้คนทั่วโลกที่ได้อ่านเรื่องราวการประสูติของพระเยซู  ในที่คริสตจักรหรือที่บ้าน กับผู้คนที่คุณรักหรือระหว่างช่วงเวลาที่อยู่คนเดียว และเราก็กำลังเป็นแสงสะท้อนถึงความยิ่งใหญ่ของพระเจ้าที่ทรงรักเรา"
+            verse: "<sup>10</sup> ฝ่ายทูตสวรรค์องค์นั้นกล่าวแก่เขาว่า <br>“อย่ากลัวเลย เพราะดูเถิด เรานำข่าวดีมายังท่านทั้งหลาย คือความปรีดียิ่งซึ่งจะมาถึงคนทั้งปวง <sup>11</sup> เพราะว่าในวันนี้พระผู้ช่วยให้รอดของท่านทั้งหลาย คือพระคริสต์เจ้า มาบังเกิดที่เมืองดาวิด”"
+            read more: "อ่านเรื่องราวที่อัศจรรย์ของวันคริสต์มาส"
+            read about: "อ่านเรื่องราวเกี่ยวกับการประสูติของพระเยซู"
+            totals since: "จากการติดตามของ YouVersion ตั้งแต่วันที่ 1 ธันวาคม 2014:"
+            total installs: "จำนวนการติดตั้งบนสมาร์ทโฟนและแท็บเล็ต"
+            download: "ดาวน์โหลดแอพพระคัมภีร์ฟรี"
+            versions: "มากกว่า %{version_count} เวอร์ชั่น ใน %{language_count} ภาษา"
+            tagline: "และพระคัมภีร์จะติดตัวคุณไปในทุกที่"
+            chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion: แอพพระคัมภีร์"
             tagline: "เริ่มต้นที่ <em>100 ล้าน</em>"
