--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -167,6 +167,7 @@ zh-TW:
     badges title: "徽章"
     currently selected: "目前選定："
     read reference: "閱讀 %{reference}"
+    read chapter: "閱讀整章"
     compare all versions: "比較所有譯本"
     link will be added: "將被加入"
     my picture: "更新我的圖片"
@@ -223,6 +224,7 @@ zh-TW:
     note: "新筆記"
     selected: "選定"
     chapter: "章節"
+    home: "首頁"
     bible: "聖經"
     notes title: "筆記"
     friends: "朋友"
@@ -1074,6 +1076,19 @@ zh-TW:
         loading: "載入更多譯本..."
         load error: "抱歉，載入更多譯本時發生錯誤，請關掉這個選單，再重新打開嘗試。"
     campaigns: 
+        christmas: 
+            tracker title: "聖誕故事閱讀追踪"
+            twitter text: "看看世界正在閱讀耶穌的誕生。在YouVersion: https://www.bible.com/christmas分享聖誕故事的閱讀追踪"
+            facebook text: "世界各地的人都在閱讀耶穌的誕生。請分享聖誕故事的閱讀追踪。在教會裡或在家裡，與摯愛的人一起或者獨處的時候，讓我們靜下來思考神對我們的愛是何等奇妙。"
+            verse: "<sup>10</sup>那天使對他們說：<br>「不要懼怕！我報給你們大喜的信息，是關乎萬民的；<sup>11</sup>因今天在大衛的城裏，為你們生了救主，就是主基督。」"
+            read more: "閱讀奇妙的聖誕故事"
+            read about: "閱讀有關耶穌的誕生"
+            totals since: "YouVersion自2014年12月1日以來的安裝："
+            total installs: "智慧型手機和平板電腦的總安裝"
+            download: "下載免費的聖經軟體"
+            versions: "超過%{version_count}個以%{language_count}種語言呈現的譯本"
+            tagline: "隨時隨地陪伴著您的聖經"
+            chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion：聖經軟體"
             tagline: "從<em>1億</em>開始"
