--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -167,6 +167,7 @@ de:
     badges title: "Abzeichen"
     currently selected: "Zur Zeit ausgewählt:"
     read reference: "%{reference} lesen"
+    read chapter: "Das ganze Kapitel lesen"
     compare all versions: "Alle Übersetzungen vergleichen"
     link will be added: "wird hinzugefügt"
     my picture: "Mein Bild aktualisieren"
@@ -223,6 +224,7 @@ de:
     note: "Neue Notiz"
     selected: "Ausgewählt"
     chapter: "Kapitel"
+    home: "Home"
     bible: "Bibel"
     notes title: "Notizen"
     friends: "Freunde"
@@ -1076,6 +1078,19 @@ de:
         loading: "Lade weitere Übersetzungen..."
         load error: "Leider gab es ein Problem beim Laden weiterer Übersetzungen. Schließe dieses Menü und öffne es erneut, um es noch einmal zu versuchen."
     campaigns: 
+        christmas: 
+            tracker title: "Christmas Story Tracker"
+            twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
+            verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
+            read more: "Read the amazing story of Christmas"
+            read about: "Reading about the birth of Jesus"
+            totals since: "YouVersion totals since December 1, 2014:"
+            total installs: "Total installs on smartphones and tablets"
+            download: "Download the free Bible App"
+            versions: "Over %{version_count} versions in %{language_count} languages"
+            tagline: "the Bible that goes with you anywhere"
+            chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion: Die Bibel App"
             tagline: "Es beginnt mit <em>100 Millionen</em>"
