--- a/config/locales/en-GB.yml
+++ b/config/locales/en-GB.yml
@@ -167,6 +167,7 @@ en-GB:
     badges title: "Badges"
     currently selected: "Currently Selected:"
     read reference: "Read %{reference}"
+    read chapter: "Read full chapter"
     compare all versions: "Compare all versions"
     link will be added: "Will be added"
     my picture: "Update my picture"
@@ -223,6 +224,7 @@ en-GB:
     note: "New note"
     selected: "Selected"
     chapter: "Chapter"
+    home: "Home"
     bible: "Bible"
     notes title: "Notes"
     friends: "Friends"
@@ -1076,6 +1078,19 @@ en-GB:
         loading: "Loading more versions..."
         load error: "Sorry, there was a problem loading more versions. Close this menu and reopen to try again."
     campaigns: 
+        christmas: 
+            tracker title: "Christmas story tracker"
+            twitter text: "Watch the world read about the birth of Jesus. Share the Christmas story tracker @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Share the Christmas story tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
+            verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Saviour has been born to you; he is the Messiah, the Lord.”"
+            read more: "Read the amazing story of Christmas"
+            read about: "Reading about the birth of Jesus"
+            totals since: "YouVersion totals since 1st December , 2014:"
+            total installs: "Total installs on smartphones and tablets"
+            download: "Download the free Bible App"
+            versions: "Over %{version_count} versions in %{language_count} languages"
+            tagline: "the Bible that goes with you anywhere"
+            chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion: The Bible app"
             tagline: "It starts with <em>100 million</em>"
