--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -167,6 +167,7 @@ fr:
     badges title: "Badges"
     currently selected: "Sélection en cours:"
     read reference: "Lire %{reference}"
+    read chapter: "Lire le chapitre entier"
     compare all versions: "Comparer toutes les versions"
     link will be added: "Sera ajouté"
     my picture: "Mettre à jour ma photo"
@@ -223,6 +224,7 @@ fr:
     note: "Nouvelle note"
     selected: "Sélectionné"
     chapter: "Chapitre"
+    home: "Home"
     bible: "Bible"
     notes title: "Notes"
     friends: "Amis"
@@ -1076,6 +1078,19 @@ fr:
         loading: "Chargement d'autres versions..."
         load error: "Désolé, il y a eu un problème de chargement d'autres versions. Fermez ce menu et rouvrez-le pour réessayer."
     campaigns: 
+        christmas: 
+            tracker title: "Christmas Story Tracker"
+            twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
+            verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
+            read more: "Read the amazing story of Christmas"
+            read about: "Reading about the birth of Jesus"
+            totals since: "YouVersion totals since December 1, 2014:"
+            total installs: "Total installs on smartphones and tablets"
+            download: "Download the free Bible App"
+            versions: "Over %{version_count} versions in %{language_count} languages"
+            tagline: "the Bible that goes with you anywhere"
+            chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion : La Bible App"
             tagline: "Ca commence avec <em>100 millions</em>"
