--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -167,6 +167,7 @@ pl:
     badges title: "Odznaczenia"
     currently selected: "Obecnie wybrane:"
     read reference: "Czytaj %{reference}"
+    read chapter: "Read full chapter"
     compare all versions: "Porównaj wszystkie wersje"
     link will be added: "zostanie dodane"
     my picture: "Uaktualnij moje zdjęcie"
@@ -223,6 +224,7 @@ pl:
     note: "Nowa notatka"
     selected: "wybrane"
     chapter: "Rozdział"
+    home: "Home"
     bible: "Biblia"
     notes title: "Notatki"
     friends: "Przyjaciele"
@@ -1080,6 +1082,19 @@ pl:
         loading: "Ładowanie kolejnych przekładów..."
         load error: "Pojawił się problem z ładowaniem przekładów. Zamknij to menu i otwórz ponownie, aby spróbować jeszcze raz."
     campaigns: 
+        christmas: 
+            tracker title: "Christmas Story Tracker"
+            twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
+            verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
+            read more: "Read the amazing story of Christmas"
+            read about: "Reading about the birth of Jesus"
+            totals since: "YouVersion totals since December 1, 2014:"
+            total installs: "Total installs on smartphones and tablets"
+            download: "Download the free Bible App"
+            versions: "Over %{version_count} versions in %{language_count} languages"
+            tagline: "the Bible that goes with you anywhere"
+            chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion: Aplikacja Biblii"
             tagline: "Zaczyna się od <em>100 milionów</em>"
