--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -167,6 +167,7 @@ ro:
     badges title: "Insigne"
     currently selected: "Selectat acum:"
     read reference: "Citește %{reference}"
+    read chapter: "Citește întreg capitolul"
     compare all versions: "Compară toate versiunile"
     link will be added: "Va fi adăugat"
     my picture: "Actualizează fotografia"
@@ -223,6 +224,7 @@ ro:
     note: "Notiță nouă"
     selected: "Selectate"
     chapter: "Capitolul"
+    home: "Acasă"
     bible: "Biblia"
     notes title: "Notițe"
     friends: "Prieteni"
@@ -1078,6 +1080,19 @@ ro:
         loading: "Se încarcă mai multe versiuni..."
         load error: "S-a produs o eroare la încărcarea mai multor versiuni. Pentru a încerca din nou, închide și apoi redeschide acest meniu."
     campaigns: 
+        christmas: 
+            tracker title: "Christmas Story Tracker"
+            twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
+            verse: "<sup>10</sup> Dar îngerul le-a zis,<br>„Nu vă temeți. Vă aduc o veste bună, care va fi o mare bucurie pentru tot norodul. <sup>11</sup> Astăzi în cetetea lui David, vi s-a născut un Mântuitor; care este Hristos, Domnul.”"
+            read more: "Citește uimitoarea poveste a Crăciunului"
+            read about: "Lecturi despre Nașterea lui Isus"
+            totals since: "Totalul YouVersion începând cu 1 decembrie 2014:"
+            total installs: "Numărul total de instalări pe smartphone-uri și tablete"
+            download: "Descarcă gratuit aplicația Biblia"
+            versions: "Peste %{version_count} versiuni în %{language_count} limbi"
+            tagline: "Biblia care merge cu tine oriunde"
+            chapter counter format: "9.999.999"
         100m: 
             logo: "YouVersion: Aplicația Biblia"
             tagline: "Începe cu <em>100 milioane</em>"
