--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -167,6 +167,7 @@ ru:
     badges title: "Значки"
     currently selected: "Выбрано:"
     read reference: "Читать %{reference}"
+    read chapter: "Читать полностью"
     compare all versions: "Посмотреть во всех переводах"
     link will be added: "будет добавлена"
     my picture: "Обновить фото"
@@ -223,6 +224,7 @@ ru:
     note: "Новая заметка"
     selected: "Выбранное"
     chapter: "Глава"
+    home: "Home"
     bible: "Библия"
     notes title: "Заметки"
     friends: "Друзья"
@@ -1080,6 +1082,19 @@ ru:
         loading: "Загружаю список переводов..."
         load error: "Извините, нам не удалось загрузить список переводов. Закройте это меню и откройте его снова."
     campaigns: 
+        christmas: 
+            tracker title: "Christmas Story Tracker"
+            twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
+            verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
+            read more: "Read the amazing story of Christmas"
+            read about: "Reading about the birth of Jesus"
+            totals since: "YouVersion totals since December 1, 2014:"
+            total installs: "Total installs on smartphones and tablets"
+            download: "Download the free Bible App"
+            versions: "Over %{version_count} versions in %{language_count} languages"
+            tagline: "the Bible that goes with you anywhere"
+            chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion: Приложение Библия"
             tagline: "Всё начинается со <em>100 млн</em>"
