--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -167,6 +167,7 @@ sk:
     badges title: "Odznaky"
     currently selected: "Momentálne označené:"
     read reference: "Čítať %{reference}"
+    read chapter: "Prečítajte si celú kapitolu"
     compare all versions: "Porovnať všetky preklady"
     link will be added: "- odkaz bude pridaný automaticky"
     my picture: "Aktualizovať môj obrázok"
@@ -223,6 +224,7 @@ sk:
     note: "Nová poznámka"
     selected: "Označené"
     chapter: "Kapitola"
+    home: "Home"
     bible: "Biblia"
     notes title: "Poznámky"
     friends: "Priatelia"
@@ -1078,6 +1080,19 @@ sk:
         loading: "Načítava sa viac prekladov..."
         load error: "Prepáčte, nepodarilo sa načítať viac prekladov. Zavrite toto menu a otvorte ho znova."
     campaigns: 
+        christmas: 
+            tracker title: "Christmas Story Tracker"
+            twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
+            verse: "<sup>10</sup> Ale anjel im povedal,<br>“Nebojte sa. Zvestujem vám veľkú radosť, ktorá bude patriť všetkým ľuďom: <sup>11</sup> Dnes sa vám v Dávidovom meste narodil Spasiteľ Kristus Pán.”"
+            read more: "Read the amazing story of Christmas"
+            read about: "Čítanie o Ježišovom narodení"
+            totals since: "YouVersion totals since December 1, 2014:"
+            total installs: "Inštalácií spolu na smartfónoch a tabletoch"
+            download: "Stiahnite si zadarmo Aplikáciu Biblia"
+            versions: "Vyše %{version_count} prekladov v %{language_count} jazykoch"
+            tagline: "Biblia, ktorá ide všade s vami"
+            chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion: Aplikácia Biblia"
             tagline: "Začína to <em>100 miliónmi</em>"
