--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -167,6 +167,7 @@ sv:
     badges title: "Medaljer"
     currently selected: "Nu markerat:"
     read reference: "Läs %{reference}"
+    read chapter: "Läs helt kapitel"
     compare all versions: "Jämför alla översättningarna"
     link will be added: "Kommer att läggas till"
     my picture: "Uppdatera min bild"
@@ -223,6 +224,7 @@ sv:
     note: "Ny anteckning"
     selected: "Markerat"
     chapter: "Kapitel"
+    home: "Home"
     bible: "Bibeln"
     notes title: "Anteckningar"
     friends: "Vänner"
@@ -1076,6 +1078,19 @@ sv:
         loading: "Laddar fler översättningar..."
         load error: "Beklagar, ett problem uppstod och det gick inte att ladda ner fler översättningar. Stäng denna meny och starta om för att försöka igen."
     campaigns: 
+        christmas: 
+            tracker title: "Christmas Story Tracker"
+            twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
+            verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
+            read more: "Read the amazing story of Christmas"
+            read about: "Reading about the birth of Jesus"
+            totals since: "YouVersion totals since December 1, 2014:"
+            total installs: "Total installs on smartphones and tablets"
+            download: "Download the free Bible App"
+            versions: "Over %{version_count} versions in %{language_count} languages"
+            tagline: "the Bible that goes with you anywhere"
+            chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion: Bibelappen"
             tagline: "Det närmar sig <em>100 miljoner</em>"
