--- a/config/locales/ta.yml
+++ b/config/locales/ta.yml
@@ -167,6 +167,7 @@ ta:
     badges title: "Badges"
     currently selected: "தற்சமயம் தேர்ந்தெடுக்கப்பட்டது:"
     read reference: "வாசிக்கவும் %{reference}"
+    read chapter: "Read full chapter"
     compare all versions: "அனைத்து மொழியாக்கங்களையும் ஒப்பிடவும்"
     link will be added: "சேர்க்கப்படும்"
     my picture: "என் படத்தை புதுப்பிக்கவும்"
@@ -223,6 +224,7 @@ ta:
     note: "புதிய குறிப்பு"
     selected: "தேர்ந்தெடுக்கப்பட்டது"
     chapter: "அதிகாரம்"
+    home: "Home"
     bible: "வேதாகமம்"
     notes title: "குறிப்புகள்"
     friends: "நண்பர்கள்"
@@ -1076,6 +1078,19 @@ ta:
         loading: "கூடுதல் பதிப்புகளை  ஏற்றுகிறது ..."
         load error: "மன்னிக்கவும், மேலும் பதிப்புகளை  ஏற்றுவதில் சிக்கல் ஏற்பட்டுள்ளது. இந்த பட்டியலை  மூடிவிட்டு மீண்டும் முயற்சிக்கவும்."
     campaigns: 
+        christmas: 
+            tracker title: "Christmas Story Tracker"
+            twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
+            verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
+            read more: "Read the amazing story of Christmas"
+            read about: "Reading about the birth of Jesus"
+            totals since: "YouVersion totals since December 1, 2014:"
+            total installs: "Total installs on smartphones and tablets"
+            download: "Download the free Bible App"
+            versions: "Over %{version_count} versions in %{language_count} languages"
+            tagline: "the Bible that goes with you anywhere"
+            chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion: பைபிள் app"
             tagline: "இது <em> 100 மில்லியன்  &lt;/ em&gt; -இல் தொடங்குகிறது"
