pull smarting strings for christmas, fix fb link to localize based on current user

--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -224,7 +224,7 @@ ko:
     note: "새 노트"
     selected: "선택"
     chapter: "장"
-    home: "Home"
+    home: "홈"
     bible: "성경"
     notes title: "노트"
     friends: "내 친구"
@@ -1077,17 +1077,17 @@ ko:
         load error: "번역본을 추가로 로딩하는 중 오류가 발생했습니다.  메뉴를 닫으신 후에 다시 시도를 해주세요."
     campaigns: 
         christmas: 
-            tracker title: "Christmas Story Tracker"
-            twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
-            facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
-            verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
-            read more: "Read the amazing story of Christmas"
-            read about: "Reading about the birth of Jesus"
-            totals since: "YouVersion totals since December 1, 2014:"
-            total installs: "Total installs on smartphones and tablets"
-            download: "Download the free Bible App"
-            versions: "Over %{version_count} versions in %{language_count} languages"
-            tagline: "the Bible that goes with you anywhere"
+            tracker title: "크리스마스 이야기 현황"
+            twitter text: "전 세상이 예수님의 성탄 에 대해서 얼마나 읽고 있는지 살펴보세요. 크리스마스 이야기를 현황 판에서 나누세요 @YouVersion: https://www.bible.com/christmas"
+            facebook text: "세상 방방곡곡에서 예수님의 탄생에 관해 읽는 분들과 크리스마스 현황판에 대해서 나누어보세요.교회 또는 집에서든, 사랑하는 분들과 함께든 아니면 개인 큐티 시간에서든, 우리를 위한 놀라운 하나님의 사랑에 대해서 묵상해봅시다."
+            verse: "<sup>10</sup> 천사가 그들에게 말하였다. &quot;두려워하지 말아라.  나는 온 백성에게 큰 기쁨이 될 소식을 너희에게 전하여 준다. <sup>11</sup> 오늘 다윗의 동네에서 너희에게 구주가 나셨으니, 그는 곧 그리스도 주님이시다.&quot;"
+            read more: "놀라운 크리스마스의 이야기를 읽어보세요."
+            read about: "예수님의 성탄에 대해서 읽어보세요."
+            totals since: "2014년 12월 1일 이후, YouVersion 총 설치수:"
+            total installs: "스마트폰이나 태블랫에 설치"
+            download: "무료 성경 앱을 다운로드하세요"
+            versions: "%{language_count} 이상의 언어로 된 %{version_count} 이상의 번역본"
+            tagline: "가는 곳마다 어디든지 함께하는 성경"
             chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion: 성경 앱"
