--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -167,7 +167,7 @@ nl:
     badges title: "Medailles"
     currently selected: "Nu geselecteerd:"
     read reference: "%{reference} lezen"
-    read chapter: "Read full chapter"
+    read chapter: "Lees het hele hoofdstuk"
     compare all versions: "Alle vertalingen vergelijken"
     link will be added: "Wordt toegevoegd"
     my picture: "Mijn foto bijwerken"
@@ -224,7 +224,7 @@ nl:
     note: "Nieuwe notitie"
     selected: "Geselecteerd"
     chapter: "Hoofdstuk"
-    home: "Home"
+    home: "Thuisscherm"
     bible: "Bijbel"
     notes title: "Notities"
     friends: "Vrienden"
@@ -1079,17 +1079,17 @@ nl:
         load error: "Sorry, er ontstond een probleem bij het laden van meer versies. Sluit dit menu en heropen het om het opnieuw te proberen."
     campaigns: 
         christmas: 
-            tracker title: "Christmas Story Tracker"
-            twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
-            facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
-            verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
-            read more: "Read the amazing story of Christmas"
-            read about: "Reading about the birth of Jesus"
-            totals since: "YouVersion totals since December 1, 2014:"
-            total installs: "Total installs on smartphones and tablets"
-            download: "Download the free Bible App"
-            versions: "Over %{version_count} versions in %{language_count} languages"
-            tagline: "the Bible that goes with you anywhere"
+            tracker title: "Kerstverhaal Volger"
+            twitter text: "Lees hoe de wereld leest over de geboorte van Jezus, Deel de Kerstverhaal Volger @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Deel de Kerstverhaal Volger terwijl wereldwijd mensen lezen over de geboorte van Jezus.  In de kerk of thuis, bij mensen van wie we houden of tijdens een rustig moment alleen, nemen we even pauze om na te denken over het wonder van Gods liefde voor ons."
+            verse: "<sup>10 </sup> De engel zei tegen hen:<br>“wees niet bang, want ik kom jullie goed nieuws brengen, dat het hele volk met grote blijdschap zal vervullen. <sup>11 </sup> Vandaag is in de stad van David jullie Redder geboren. Hij is de Messias, de Heer.”"
+            read more: "Lees het prachtige Kerstverhaal"
+            read about: "Lezen over de geboorte van Jezus"
+            totals since: "Aantal van YouVersion sinds 1 december 2014"
+            total installs: "Totaal aantal installaties op smartphones en tablets"
+            download: "Download de gratis Bijbel App"
+            versions: "Meer dan %{version_count} versies in %{language_count} talen"
+            tagline: "De Bijbel die overal met je mee gaat"
             chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion: De Bijbel app"
