--- a/config/locales/no.yml
+++ b/config/locales/no.yml
@@ -167,7 +167,7 @@
     badges title: "Merker"
     currently selected: "Markert nå:"
     read reference: "Les %{reference}"
-    read chapter: "Read full chapter"
+    read chapter: "Les hele kapittelet"
     compare all versions: "Sammenlign alle versjoner"
     link will be added: "Vil bli lagt til"
     my picture: "Oppdater mitt bilde"
@@ -224,7 +224,7 @@
     note: "Nytt notat"
     selected: "Markert"
     chapter: "Kapittel"
-    home: "Home"
+    home: "Hjem"
     bible: "Bibel"
     notes title: "Notater"
     friends: "Venner"
@@ -1079,18 +1079,18 @@
         load error: "Et problem oppstod i forbindelse med nedlastning av flere oversettelser. Lukk denne menyen og åpne på nytt for å prøve igjen."
     campaigns: 
         christmas: 
-            tracker title: "Christmas Story Tracker"
-            twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
-            facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
-            verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
-            read more: "Read the amazing story of Christmas"
-            read about: "Reading about the birth of Jesus"
-            totals since: "YouVersion totals since December 1, 2014:"
-            total installs: "Total installs on smartphones and tablets"
-            download: "Download the free Bible App"
-            versions: "Over %{version_count} versions in %{language_count} languages"
-            tagline: "the Bible that goes with you anywhere"
-            chapter counter format: "9,999,999"
+            tracker title: "Julehistorien er lest"
+            twitter text: "Se verden lese om Jesu fødsel. Del juleevangelietelleren @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Del juleevangelietelleren mens folk over hele verden leser om Jesu fødsel.  I kirken eller hjemme, sammen med folk vi er glad i eller i et stille øyeblikk alene. Vi stopper opp for å ta til oss det underet Guds kjærlighet er for oss."
+            verse: "<sup>10</sup> Men engelen sa til dem,<br>“Frykt ikke! For se, jeg forkynner dere en stor glede - en glede for alt folket. <sup>11</sup> I dag er det født dere en frelser, som er Messias, Herren - i Davids by.”"
+            read more: "Les den fantastiske historien om julen"
+            read about: "Les om Jesu fødsel"
+            totals since: "Samlet på YouVersion siden 1. desember 2014:"
+            total installs: "Antall installasjoner på smarttelefoner og nettbrett"
+            download: "Last ned Bibel-appen gratis"
+            versions: "Over %{version_count} oversettelser på %{language_count} språk"
+            tagline: "Bibelen du kan ta med deg over alt"
+            chapter counter format: "9 999 999"
         100m: 
             logo: "YouVersion: Bibel-appen"
             tagline: "Det begynner med <em>100 millioner</em>"
