--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1013,7 +1013,7 @@ de:
             our action: "Wir wurden hierüber informiert und werden uns so bald wie möglich darum kümmern."
         home: 
             hero: 
-                heading: "Eine kostenlose Bibel fürs Handy, Tablet & den PC."
+                heading: "Eine kostenlose Bibel fürs Handy, Tablet & den PC!"
                 description: "YouVersion, eine einfache, werbefreie Bibel, bringt Gottes Wort in deinen Alltag."
                 learn more: "Mehr dazu weiter unten."
                 start reading: "Fang an zu lesen."
@@ -1079,18 +1079,18 @@ de:
         load error: "Leider gab es ein Problem beim Laden weiterer Übersetzungen. Schließe dieses Menü und öffne es erneut, um es noch einmal zu versuchen."
     campaigns: 
         christmas: 
-            tracker title: "Christmas Story Tracker"
-            twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
-            facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
-            verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
-            read more: "Read the amazing story of Christmas"
-            read about: "Reading about the birth of Jesus"
-            totals since: "YouVersion totals since December 1, 2014:"
-            total installs: "Total installs on smartphones and tablets"
-            download: "Download the free Bible App"
-            versions: "Over %{version_count} versions in %{language_count} languages"
-            tagline: "the Bible that goes with you anywhere"
-            chapter counter format: "9,999,999"
+            tracker title: "Anzahl der Aufrufe"
+            twitter text: "Schau zu, wie die Welt die Geschichte von der Geburt Jesu liest. Teile den Weihnachtsgeschichten-Tracker @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Teile den Weihnachtsgeschichten-Tracker, während die Menschen weltweit von Jesu Geburt lesen.  In der Kirche wie auch zuhause, bei unseren Geliebten oder alleine während einem ruhigen Moment verharren wir, um über das Wunder von Gottes Liebe zu uns nachzudenken."
+            verse: "<sup>10</sup> Aber der Engel sagte:<br>“Fürchtet euch nicht! Ich verkünde euch eine Botschaft, die das ganze Volk mit grosser Freude erfüllt: <sup>11</sup> Heute ist euch in der Stadt, in der schon David geboren wurde, der lang ersehnte Retter zur Welt gekommen. Es ist Christus, der Herr.”"
+            read more: "Lese die unglaubliche Weihnachtsgeschichte"
+            read about: "Von Jesu Geburt lesen"
+            totals since: "Gesamtzahl von YouVersion-Downloads seit dem 1. Dezember 2014:"
+            total installs: "Installationen auf Smartphones und Tablets"
+            download: "Lade die Bibel App gratis herunter"
+            versions: "Über %{version_count} Übersetzungen in %{language_count} Sprachen"
+            tagline: "So hast du die Bibel immer dabei!"
+            chapter counter format: "9'999'999"
         100m: 
             logo: "YouVersion: Die Bibel App"
             tagline: "Es beginnt mit <em>100 Millionen</em>"
