--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -167,7 +167,7 @@ pt:
     badges title: "Medalhas"
     currently selected: "Atualmente Selecionado:"
     read reference: "Ler %{reference}"
-    read chapter: "Read full chapter"
+    read chapter: "Ler o capítulo inteiro"
     compare all versions: "Comparar Todas as Versões"
     link will be added: "Será Adicionado"
     my picture: "Atualizar Minha Foto"
@@ -224,7 +224,7 @@ pt:
     note: "Nova Anotação"
     selected: "Selecionado"
     chapter: "Capítulo"
-    home: "Home"
+    home: "Página Inicial"
     bible: "Bíblia"
     notes title: "Anotações"
     friends: "Amigos"
@@ -1079,18 +1079,18 @@ pt:
         load error: "Desculpe, houve um problema ao carregar mais versões. Feche este menu e reabra para tentar novamente."
     campaigns: 
         christmas: 
-            tracker title: "Christmas Story Tracker"
-            twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
-            facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
-            verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
-            read more: "Read the amazing story of Christmas"
-            read about: "Reading about the birth of Jesus"
-            totals since: "YouVersion totals since December 1, 2014:"
-            total installs: "Total installs on smartphones and tablets"
-            download: "Download the free Bible App"
-            versions: "Over %{version_count} versions in %{language_count} languages"
-            tagline: "the Bible that goes with you anywhere"
-            chapter counter format: "9,999,999"
+            tracker title: "História do Natal"
+            twitter text: "Assista o mundo lendo sobre o nascimento de Jesus. Compartilhe a História do Natal @YouVersion:https://www.bible.com/christmas"
+            facebook text: "Compartilhe a História do Natal com as pessoas ao redor do mundo enquanto lemos sobre o nascimento de Jesus.  Na igreja ou em casa, perto das pessoas que amamos ou durante um momento a sós, paramos para refletir sobre o maravilhoso amor de Deus por nós."
+            verse: "<sup>10</sup> Mas o anjo disse:<br>— “Não tenham medo!  Estou aqui a fim de trazer uma boa notícia para vocês, e ela será motivo de grande alegria também para todo o povo! <sup>11</sup> Hoje mesmo, na cidade de Davi, nasceu o Salvador de vocês — o Messias, o Senhor!”"
+            read more: "Leia a incrível história do Natal"
+            read about: "Lendo sobre o nascimento de Jesus"
+            totals since: "Totais do YouVersion desde 1 de Dezembro, 2014"
+            total installs: "Total de instalações em smartphones e tablets"
+            download: "Baixe grátis o App da Bíblia"
+            versions: "Mais de %{version_count} versões em %{language_count}idiomas"
+            tagline: "a Bíblia que vai com você para qualquer lugar"
+            chapter counter format: "9.999,999"
         100m: 
             logo: "YouVersion: O app da Bíblia"
             tagline: "Começa com <em>100 milhões</em>"
