--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -224,7 +224,7 @@ ru:
     note: "Новая заметка"
     selected: "Выбранное"
     chapter: "Глава"
-    home: "Home"
+    home: "Домой"
     bible: "Библия"
     notes title: "Заметки"
     friends: "Друзья"
@@ -1083,18 +1083,18 @@ ru:
         load error: "Извините, нам не удалось загрузить список переводов. Закройте это меню и откройте его снова."
     campaigns: 
         christmas: 
-            tracker title: "Christmas Story Tracker"
-            twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
-            facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
-            verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
-            read more: "Read the amazing story of Christmas"
-            read about: "Reading about the birth of Jesus"
-            totals since: "YouVersion totals since December 1, 2014:"
-            total installs: "Total installs on smartphones and tablets"
-            download: "Download the free Bible App"
-            versions: "Over %{version_count} versions in %{language_count} languages"
-            tagline: "the Bible that goes with you anywhere"
-            chapter counter format: "9,999,999"
+            tracker title: "Трекер Рождественской Истории"
+            twitter text: "Наблюдайте, как мир читает о рождении Иисуса. Расскажите о трекере Рождественской Истории @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Делитесь трекером Рождественской истории, в то время как люди по всему миру читают о рождении Иисуса.  Где бы мы ни находились: в церкви или дома, с людьми, которых любим или в момент одиночества в тишине, — мы уделяем время, чтобы подумать о Божьей любви к нам."
+            verse: "<sup>10 </sup> И сказал им Ангел:<br>“Не бойтесь; я возвещаю вам великую радость, которая будет всем людям: <sup>11 </sup> ибо ныне родился вам в городе Давидовом Спаситель, Который есть Христос Господь”"
+            read more: "Читайте удивительную историю Рождества"
+            read about: "Чтение о рождении Иисуса"
+            totals since: "Всего отрывков прочитано, начиная с 1 декабря 2014:"
+            total installs: "Суммарное количество установок на мобильных устройствах"
+            download: "Загрузите бесплатное приложение \"Библия\""
+            versions: "Более %{version_count} переводов на %{language_count} языках"
+            tagline: "Библия, которая всегда с вами"
+            chapter counter format: "9 999 999"
         100m: 
             logo: "YouVersion: Приложение Библия"
             tagline: "Всё начинается со <em>100 млн</em>"
