--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -224,7 +224,7 @@ sv:
     note: "Ny anteckning"
     selected: "Markerat"
     chapter: "Kapitel"
-    home: "Home"
+    home: "Hem"
     bible: "Bibeln"
     notes title: "Anteckningar"
     friends: "Vänner"
@@ -1079,18 +1079,18 @@ sv:
         load error: "Beklagar, ett problem uppstod och det gick inte att ladda ner fler översättningar. Stäng denna meny och starta om för att försöka igen."
     campaigns: 
         christmas: 
-            tracker title: "Christmas Story Tracker"
-            twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
-            facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
-            verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
-            read more: "Read the amazing story of Christmas"
-            read about: "Reading about the birth of Jesus"
-            totals since: "YouVersion totals since December 1, 2014:"
-            total installs: "Total installs on smartphones and tablets"
-            download: "Download the free Bible App"
-            versions: "Over %{version_count} versions in %{language_count} languages"
-            tagline: "the Bible that goes with you anywhere"
-            chapter counter format: "9,999,999"
+            tracker title: "Räknare för julberättelse"
+            twitter text: "Se världen läsa om Jesu födelse. Dela räknaren över julberättelse @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Dela räknaren över julberättelse medan folk runt om i världen läser om Jesu födelse.   I kyrkan eller hemma, tillsammans med människor vi älskar eller under en lugn stund i ensamhet, stannar vi upp och reflektera över det underbara kärlek Gud ger till oss."
+            verse: "<sup>10</sup> Men ängeln sade till dem:<br> »Var inte rädda. Jag bär bud till er om en stor glädje, en glädje för hela folket. <sup>11</sup> I dag har en frälsare fötts åt er i Davids stad, han är Messias, Herren. "
+            read more: "Läs den fantastiska berättelsen om julen"
+            read about: "Läst om Jesu födelse"
+            totals since: "Totalt på YouVersion sedan 1 december 2014:"
+            total installs: "Antal installationer på mobiltelefoner och pekplattor"
+            download: "Ladda ner den fria Bibelappen"
+            versions: "Över %{version_count} översättningar på %{language_count} språk"
+            tagline: "Bibeln som följer med dig överallt"
+            chapter counter format: "9 999 999"
         100m: 
             logo: "YouVersion: Bibelappen"
             tagline: "Det närmar sig <em>100 miljoner</em>"
