update with smartling pull

--- a/config/locales/cy.yml
+++ b/config/locales/cy.yml
@@ -173,7 +173,7 @@ cy:
     my picture: "Diweddaru Fy Llun"
     my notifications: "Delio â Hysbysiadau"
     my devices: "Dyfeisiadau a Gysylltwyd"
-    language name: "Saesneg"
+    language name: "Cymraeg"
     sign in: "Mewngofnodi"
     sign up: "Cofrestrwch"
     have an account: "Oes Cyfrif gennych yn barod ?"
