--- a/config/locales/fi.yml
+++ b/config/locales/fi.yml
@@ -224,7 +224,7 @@ fi:
     note: "Uusi muistiinpano"
     selected: "Valittu"
     chapter: "Luku"
-    home: "Home"
+    home: "Koti"
     bible: "Raamattu"
     notes title: "Muistiinpanot"
     friends: "Ystävät"
@@ -1079,18 +1079,18 @@ fi:
         load error: "Käännöksien latauksessa tapahtui valitettavasti virhe. Sulje tämä valikko ja avaa uudestaan."
     campaigns: 
         christmas: 
-            tracker title: "Christmas Story Tracker"
-            twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
-            facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
-            verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
-            read more: "Read the amazing story of Christmas"
-            read about: "Reading about the birth of Jesus"
-            totals since: "YouVersion totals since December 1, 2014:"
-            total installs: "Total installs on smartphones and tablets"
-            download: "Download the free Bible App"
-            versions: "Over %{version_count} versions in %{language_count} languages"
-            tagline: "the Bible that goes with you anywhere"
-            chapter counter format: "9,999,999"
+            tracker title: "Joulun Sanoma -laskuri"
+            twitter text: "Seuraa miten maailma lukee Jeesuksen syntymästä. Jaa Joulun Sanoma -laskuri @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Jaa Joulun Sanoma -laskuri, jonka avulla näkee miten maailma lukee Jeesuksen syntymästä.Seurakunnissa tai kotona, läheistemme keskellä tai itseksemme hiljentyessä, pysähdymme pohtimaan Jumalan ihmeellistä rakkautta meitä kohtaan."
+            verse: "<sup>10</sup> mutta enkeli sanoi heille:<br/>&quot;Älkää pelätkö! Minä ilmoitan teille ilosanoman, suuren ilon koko kansalle. <sup>11</sup> Tänään on teille Daavidin kaupungissa syntynyt Vapahtaja. Hän on Kristus, Herra.&quot;"
+            read more: "Lue joulun ihmeellisestä sanomasta"
+            read about: "Jeesuksen syntymästä lukijoita"
+            totals since: "YouVersionin kokonaismäärä 1. joulukuuta 2014 lähtien:"
+            total installs: "Asennusten määrä älypuhelimilla ja tableteilla"
+            download: "Lataa ilmainen Raamattusovellus"
+            versions: "Yli %{version_count} käännöstä %{language_count} kielellä"
+            tagline: "Raamattu kulkee mukanasi minne menetkin"
+            chapter counter format: "9 999 999"
         100m: 
             logo: "YouVersion: Raamattusovellus"
             tagline: "Se alkaa <em>100 miljoonalla</em>"
